\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{NEWS}
\title{bbmle News}
\encoding{UTF-8}
\section{CHANGES IN VERSION 1.0.4.2 (2012-02-25)}{
  \itemize{
    \item fix bug in gradient/vecpar/profiling interaction (Daniel
    Kaschek)
    \item improve (and document) uniroot method for confint: now
    respects box constraints
  }
}
\section{CHANGES IN VERSION 1.0.4.1 (2012-01-27)}{
  \itemize{
    \item remove a bit of installed junk; vignette fix
  }
}
\section{CHANGES IN VERSION 1.0.4 (2012-01-02)}{
  \itemize{
    \item fix imports for latest version of R-devel
  }
}
\section{CHANGES IN VERSION 1.0.3}{
  \itemize{
    \item modified starting value code and documentation slightly:
    now allows per-parameter lists.  Updated docs.
    \item Fixed bug that would screw things up if 'i' were used
    as a parameter.
    \item Update vignette to conform to MuMIn changes
  }
}

\section{CHANGES IN VERSION 1.0.2 (2011-09-07)}{
  \itemize{
    \item fixed buglet in detection of no-intercept models when setting
    starting values
  }
}
\section{CHANGES IN VERSION 1.0.1 (2011-08-04)}{
  \itemize{
    \item Turned off some warnings when skip.hessian=TRUE (e.g. in profile)
    \item Calculate max grad and Hessian eigenval ratio, add to "details"
    \item (Should add accessor methods)
    \item Fixed NAMESPACE to export methods etc etc properly; removed
    universal exportPattern directive
  }
}

\section{CHANGES IN VERSION 1.0.0 (2011-06-17)}{
  \itemize{
    \item mainly just a version bump for CRAN
    \item added tag for variables in profile/confint warnings
    \item lots more technical information in vignette about profiling algorithm
}}

\section{CHANGES IN VERSION 0.9.9 (2011-05-14)}{
  \itemize{
    \item changed NEWS to NEWS.Rd
    \item fixed bug for "optimize" -- profile etc. now respect bounds
    \item eliminated warning about bounds names if all identical
    \item add "try_harder" flag to profiling (ignore flat spots, NAs ...)
}}
  